--- a/ipython/profile/static/custom/custom.css
+++ b/ipython/profile/static/custom/custom.css
@@ -25,7 +25,7 @@ This will always be an empty file in IPython
 .cm-s-ipython span.cm-variable {color:white;}
 
 .CodeMirror div.CodeMirror-cursor {
-    border-left: 1px solid #f8f8f0;
+    border-left: 1px solid #5d5d5d;
     z-index: 3;
 }
 
